fix bottom spacing

--- a/assets/styles/index.scss
+++ b/assets/styles/index.scss
@@ -80,6 +80,6 @@ button:hover {
     top: 200px;
     left: 00px;
     width: 800px;
-    height: 505px;
+    height: 450px;
     z-index: -20;
 }
